<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_movie"
        android:title="@string/movie_menu_text"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" >
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item android:id="@+id/sub_menu_sort_popularity"
                app:showAsAction="ifRoom"
                android:orderInCategory="1"
                android:title="@string/sort_popularity_text" />
            <item android:id="@+id/sub_menu_sort_top_rated"
                app:showAsAction="ifRoom"
                android:orderInCategory="2"
                android:title="@string/sort_top_rated_text" />
        </menu>
    </item>
</menu>